--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,7 @@ project(
     ['cpp'],
     version: '0.1.0',
     license: 'MIT',
-    default_options: ['cpp_std=c++20',
+    default_options: ['cpp_std=c++2a',
                       'stormkit:enable_entities=false',
                       'stormkit:enable_engine=false',
                       'stormkit:enable_window=false',
