Prefer mount settings.json and facts.txt instead of copying in the docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,3 +2,6 @@ version: "3.9"
 services:
    inquisitor:
       build: .
+      volumes:
+         - ./settings.json:/root/settings.json
+         - ./facts.txt:/root/facts.txt
