--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -1,4 +1,8 @@
- subdir('BasePlugin')
- subdir('RandomQuotePlugin')
- subdir('QuoteMessagePlugin')
- subdir('CleanChannelPlugin')
+subdir('BasePlugin')
+subdir('RandomQuotePlugin')
+subdir('QuoteMessagePlugin')
+subdir('CleanChannelPlugin')
+
+if get_option('shader_plugin').enabled()
+    subdir('ShaderPlugin')
+endif
