--- a/plugins/ShaderPlugin/meson.build
+++ b/plugins/ShaderPlugin/meson.build
@@ -1,6 +1,7 @@
 shaderc_dep = dependency('shaderc')
+libwebp_dep = dependency('libwebp')
 
-dependencies = [stormkit_core_dep, stormkit_log_dep, stormkit_render_dep, shaderc_dep, json_dep, inquisitor_api_dep]
+dependencies = [stormkit_core_dep, stormkit_log_dep, stormkit_render_dep, shaderc_dep, json_dep, inquisitor_api_dep, libwebp_dep]
 
 sources = files([
     'ShaderPlugin.cpp'
