--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -2,6 +2,7 @@ subdir('BasePlugin')
 subdir('RandomQuotePlugin')
 subdir('QuoteMessagePlugin')
 subdir('CleanChannelPlugin')
+subdir('MelonPlugin')
 
 if get_option('shader_plugin').enabled()
     subdir('ShaderPlugin')
