Fix video encoding
Signed-off-by: Arthur LAURENT <arthur.laurent4@gmail.com>

--- a/plugins/ShaderPlugin/meson.build
+++ b/plugins/ShaderPlugin/meson.build
@@ -1,7 +1,12 @@
 shaderc_dep = dependency('shaderc')
-libwebp_dep = dependency('libwebp')
+#libwebm_dep = dependency('libwebm')
+#libvpx_dep = dependency('unofficial-libvpx', method: 'cmake', modules: 'unofficial::libvpx::libvpx')
+libavcodec_dep = dependency('libavcodec', fallback: ['FFmpeg', 'libavcodec_dep'])
+libavformat_dep = dependency('libavformat', fallback: ['FFmpeg', 'libavformat_dep'])
+libavutil_dep = dependency('libavutil', fallback: ['FFmpeg', 'libavutil_dep'])
+swscale_dep = dependency('libswscale', fallback: ['FFmpeg', 'libswscale_dep'])
 
-dependencies = [stormkit_core_dep, stormkit_log_dep, stormkit_render_dep, shaderc_dep, json_dep, inquisitor_api_dep, libwebp_dep]
+dependencies = [stormkit_core_dep, stormkit_log_dep, stormkit_render_dep, shaderc_dep, json_dep, inquisitor_api_dep, libavcodec_dep, libavformat_dep, libavutil_dep, swscale_dep]
 
 sources = files([
     'ShaderPlugin.cpp'
