--- a/plugins/BasePlugin/meson.build
+++ b/plugins/BasePlugin/meson.build
@@ -1,4 +1,4 @@
-dependencies = [stormkit_core_dep, stormkit_log_dep, json_dep, fmt_dep, inquisitor_api_dep, dpp_dep]
+dependencies = [stormkit_core_dep, stormkit_log_dep, json_dep, inquisitor_api_dep, dpp_dep]
 
 sources = files([
     'BasePlugin.cpp'
